--- a/TensorRT-LLM/Dockerfile
+++ b/TensorRT-LLM/Dockerfile
@@ -2,7 +2,7 @@ FROM nvidia/cuda:12.4.1-devel-ubuntu22.04
 
 RUN apt-get update && apt-get -y install python3.10 python3-pip openmpi-bin libopenmpi-dev git git-lfs
 
-RUN pip3 uninstall tensorrt tensorrt-cu12 tensorrt-cu12-bindings tensorrt-cu12-libs tensorrt-llm torch
+RUN pip3 uninstall -y tensorrt tensorrt-cu12 tensorrt-cu12-bindings tensorrt-cu12-libs tensorrt-llm torch
 
 RUN pip3 install tensorrt_llm -U --pre --extra-index-url https://pypi.nvidia.com
 
